:fix: change position PlayVideoButton only when control panel visible

--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -992,7 +992,7 @@ a,
   }
 
   .video-volume {
-    width: 28vw;
+    width: 23vw;
   }
 
   .video-section {
